--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
         }
     ],
     "require" : {
-        "doctrine/dbal": "2.*"
+        "doctrine/dbal": "^2.0"
     },
     "autoload": {
         "psr-0": {
             "DoctrineTimestamp": "lib"
         }
+    },
+    "autoload-dev": {
+        "psr-4": { "DoctrineTimestamp\\Tests\\": "tests/" }
     }
 }
