--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
     },
     "autoload-dev": {
         "psr-4": { "DoctrineTimestamp\\Tests\\": "tests/" }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7"
     }
 }
