--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require" : {
-        "doctrine/dbal": "2.*"
+        "doctrine/dbal": "^2 || ^3"
     },
     "autoload": {
         "psr-0": {
